# Albert

./: .gitignore  README.md
api/: Dockerfile  deploy.sh  pyproject.toml  test.py
api/app/db/: base.py  session.py
api/app/endpoints/: search.py  stream.py
api/app/mockups/: mailjet_mockup.py
api/app/tests/utils/: login.py
contrib/gpt4all/: .env.example  .env_GGML  .env_GGUF  Dockerfile  Dockerfile_GGML  Dockerfile_GGUF  app.py  app_GGML.py  docker-compose.yml  docker-compose_GGML.yml  docker-compose_GGUF.yml  pyproject.toml  pyproject_GGML.toml
databases/postgres/: docker-compose.yml
databases/vector_store/: docker-compose.yml
docs/fr/: installation.md  pyalbert.md
pyalbert/: .env.example  albert.py  config.py  pyproject.toml  setup.sh
pyalbert/clients/: albert.py
pyalbert/corpus/: parser.py
pyalbert/index/: _create_index.py
pyalbert/prompt/: prompt.py
pyalbert/scripts/: auto-chat-name.py
pyalbert/whitelist/: _download_directory.py
