[project]
name = "albert-api"
version = "0.4.0"
description = "Albert API"
authors = [{ name = "Etalab", email = "etalab@modernisation.gouv.fr" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "alembic==1.13.1",
    "bcrypt==4.1.3",
    "elasticsearch==8.14.0",
    "email-validator==2.1.1",
    "fastapi==0.111.0",
    "gpt4all==2.7.0",
    "lz4==4.3.3",
    "mailjet-rest==1.3.4",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.2",
    "pydantic-core==2.18.3",
    "python-jose==3.3.0",
    "qdrant-client==1.9.1",
    "requests==2.32.3",
    "spacy==3.7.5",
    "SQLAlchemy==2.0.30",
    "uvicorn==0.30.1",
]

[project.optional-dependencies]
test = ["pytest==7.4.4"]

[tool.ruff]
line-length = 100
exclude = ["alembic/versions/"]
select = [
    "I", # sort imports
]

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.isort.sections]
api = ["app"]
pyalbert = ["pyalbert"]

[tool.setuptools]
py-modules = []

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["pytest==7.4.4", "pytest-cov==4.1.0", "ruff==0.2.1"]

[tool.rye]
managed = true
dev-dependencies = ["pytest==7.4.4", "pytest-cov==4.1.0", "ruff==0.2.1"]
