[project]
name = "pyalbert"
version = "0.4.0"
description = "The Albert toolkit -- CLI, libraries and lexicons"
authors = [{name = "Etalab", email = "etalab@modernisation.gouv.fr"}]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4==4.12.3",
    "docopt-ng==0.9.0",
    "elasticsearch==8.14.0",
    "jinja2==3.1.3",
    "langchain-text-splitters==0.2.0",
    "lxml==5.2.2",
    "lz4==4.3.3",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "python-dotenv==1.0.1",
    "qdrant-client==1.9.1",
    "requests==2.32.3",
    "wget==3.2",
]

[tool.pdm.dev-dependencies]
dev = [
    "huggingface-hub==0.23.2",
    "prompt_toolkit==3.0.45",
]

[project.scripts]
pyalbert = "pyalbert.albert:main"

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
exclude = ["lexicon/"]
select = [
    "I", # sort imports
]

[tool.ruff.lint]
ignore-init-module-imports = true

