[project]
name = "albert-llm"
version = "0.1.0"
description = "Albert LLM API"
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"},
]
dependencies = [
    "fastapi==0.111.0",
    "gpt4all==2.7.0",
    "huggingface-hub==0.23.2",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "torch==2.4.0.dev20240529",
    "transformers==4.41.2",
    "uvicorn==0.30.1",
]
requires-python = "==3.12.*"
license = {text = "MIT"}

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore-init-module-imports = true

[tool.ruff.lint.isort.sections]
pyalbert = ["pyalbert"]
